@@ -18,10 +18,11 @@ function SecurityCamera:init(unit, ...)
     self._ehi_key = tostring(unit:key())
 end
 
+---@param tape_loop_t number
 function SecurityCamera:_start_tape_loop(tape_loop_t, ...)
     original._start_tape_loop(self, tape_loop_t, ...)
     local t = tape_loop_t + 5
-    if show_tracker then
+    if show_tracker and managers.ehi_tracker:CallFunction2(self._ehi_key, "SetTime", t) then
         managers.ehi_tracker:AddTracker({
             id = self._ehi_key,
             time = t,
@@ -30,7 +31,7 @@ function SecurityCamera:_start_tape_loop(tape_loop_t, ...)
             class = EHI.Trackers.Warning
         })
     end
-    if show_waypoint then
+    if show_waypoint and managers.ehi_waypoint:CallFunction2(self._ehi_key, "SetTime", t) then
         managers.ehi_waypoint:AddWaypoint(self._ehi_key, {
             time = t,
             icon = "camera_loop",
