@@ -285,7 +285,7 @@
                     "description": "ehi_buffs_menu_desc",
                     "next_menu": "ehi_buffs_menu",
                     "parent" : "ehi_show_buffs_choice",
-                    "ehi_ver" : 298
+                    "ehi_ver" : 312
                 }
             ]
         },
